# keboola_agent_cli

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
docs/: PLAN-catalog.md  PLAN-parallel.md  PLAN-security.md  config-guide.md  e2e-scenarios.md  guide.md  hint-mode.md  issue-74-concept-check-command.md  lineage.md  plan-134-storage-files.md  refactor.md  use-cases.md  write-guard-and-single-config-plan.md
docs/done/: PLAN-mcp.md  PLAN.md  design-system.md
ir-explorer/: index.html
kbc-explorer/: README.md  catalog.js  catalog.json  index.html  orchestrations.js  orchestrations.json  schema.json
plugins/kbagent/.claude-plugin/: plugin.json
scripts/: benchmark.py  debug_linkedby_type.sh  generate_changelog.py  generate_skill.py  lineage_deep.py  pre-commit  sync_version.py
src/keboola_agent_cli/: __init__.py  __main__.py  ai_client.py  auto_update.py  changelog.py  cli.py  client.py  config_store.py  constants.py  errors.py  http_base.py  json_utils.py  manage_client.py  models.py  output.py  permissions.py
src/keboola_agent_cli/commands/: _helpers.py  _metadata_input.py  branch.py  changelog.py  component.py  config.py  context.py  doctor.py  (+17 more)
tests/: conftest.py  helpers.py  test_ai_client.py  test_auto_update.py  test_base_service.py  test_branch_metadata_cli.py  test_branch_metadata_service.py  test_branch_service.py  test_cli.py  test_client.py  test_component_cli.py  test_component_service.py  test_config_rename.py  test_config_rename_cli.py  test_config_resolution.py  test_config_search.py  test_config_search_cli.py  test_config_store.py  test_config_update.py  test_deep_lineage_service.py  test_doctor_service.py  test_e2e.py  test_e2e_lineage_deep.py  test_encrypt_cli.py  test_encrypt_service.py  test_errors.py  test_explorer_service.py  test_file_locking.py  test_helpers.py  test_hints.py  test_http_base.py  test_integration.py  test_json_utils.py  test_kai_cli.py  test_kai_service.py  test_kbc_service.py  test_lineage_service.py  test_manage_client.py  test_mcp_service.py  test_mcp_transport.py  (+27 more)
(+66 files in other folders)
