[project]
name = "keboola-agent-cli"
version = "0.1.0"
description = "AI-friendly CLI for managing Keboola projects"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Keboola", email = "dev@keboola.com" },
]
dependencies = [
    "typer[all]>=0.12",
    "rich>=13",
    "httpx>=0.27",
    "pydantic>=2.5",
    "platformdirs>=4",
]

[project.scripts]
kbagent = "keboola_agent_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/keboola_agent_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-httpx>=0.30",
]
