[project]
name = "keboola-agent-cli"
version = "0.7.3"
description = "AI-friendly CLI for managing Keboola projects"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Keboola", email = "dev@keboola.com" },
]
dependencies = [
    "typer[all]>=0.12",
    "rich>=13",
    "httpx>=0.27",
    "pydantic>=2.5",
    "platformdirs>=4",
    "mcp>=1.0.0,<2.0.0",
    "jsonschema>=4.20",
    "pyyaml>=6",
    "packaging>=23",
]

[project.scripts]
kbagent = "keboola_agent_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/keboola_agent_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
markers = [
    "integration: marks tests as integration tests requiring real API credentials (deselect with '-m \"not integration\"')",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["keboola_agent_cli"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-httpx>=0.30",
    "pytest-asyncio>=0.23",
    "ruff>=0.8",
    "bandit>=1.9.4",
    "pip-audit>=2.10.0",
]
